Fixes body scrollbar for chrome

--- a/client/src/app/routes/dataset/code-editor/code-editor.component.scss
+++ b/client/src/app/routes/dataset/code-editor/code-editor.component.scss
@@ -30,7 +30,7 @@
 @import 'variables.scss';
 
 ::ng-deep body.mat-app-background.mat-typography {
-    ::-webkit-scrollbar {
+    &::-webkit-scrollbar {
         display: none;
     }
     -ms-overflow-style: none;
